--- a/build.gradle
+++ b/build.gradle
@@ -42,12 +42,10 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     // HttpClient
     compile('org.apache.httpcomponents:httpclient:4.5.3')
-    // lombok
     compileOnly 'org.projectlombok:lombok:1.18.2'
-    // Redis
     compile('org.springframework.boot:spring-boot-starter-data-redis')
-    // Quartz
     compile('org.springframework.boot:spring-boot-starter-quartz')
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     // 该依赖用于测试阶段
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
